[package]
name = "crabkeyduck"
license = "MPL-2.0"
description = "A WIP asciidoc parser in Rust"
repository = "https://github.com/coolshaurya/crabkeyduck/"
readme = "README.md"
version = "0.1.0"
authors = ["Shaurya Shubham <shauryashubham1234567890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
